--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
 </head>
-<body>
-    <header style="color: #FF0000; height: 70px; width: 100%"></header>
-    <footer style="color: #00FF00; height: 70px; width: 100%">
-        <p>Best School</p>
+<body style="margin: 0; padding: 0">
+    <header style="background-color: #FF0000; height: 70px; width: 100%; margin: 0"></header>
+
+    <footer style="background-color: #00FF00; height: 60px; width: 100%; margin: 0; position: fixed; bottom: 0; align-content: center; text-align: center;">
+    <p>Best School</p>
     </footer>
     
 </body>
